Fix #6: Fix incorrect alignment of inputs, buttons, and error block for INLINE FORM orientation.

--- a/assets/css/activeform.css
+++ b/assets/css/activeform.css
@@ -14,6 +14,10 @@
     margin-top: -10px;
 }
 
+.form-inline > .form-group {
+    vertical-align: top;
+}
+
 .input-multiselect {
     overflow: auto;
     min-height: 145px !important;
